k8s/02-service.kube.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flood-exporter
  labels:
    app: flood-exporter
spec:
  ports:
  - name: http
    port: 80
    targetPort: 7979
  selector:
    app: flood-exporter
