k8s/flood-exporter.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flood-exporter
spec:
  ports:
  - port: 80
    targetPort: 7979
  selector:
    app: flood-exporter
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood-exporter
spec:
  selector:
    matchLabels:
      app: flood-exporter
  replicas: 2
  template:
    metadata:
      labels:
        app: flood-exporter
    spec:
      containers:
      - name: nginx
        image: ghcr.io/46bit/flood-exporter
        ports:
        - containerPort: 7979
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood-exporter
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - flood-exporter.k8s.46b.it
      secretName: flood-exporter-tls
  rules:
  - host: flood-exporter.k8s.46b.it
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flood-exporter
            port:
              number: 80
...
